# kg-processing

./: .env.example  .gitignore  README.md  check_canonical_ids.py  check_predicates.py  check_qdrant.py  commands.md  coverage_report.txt  create_registry_specs.py  danger_reset.py  debug_registry.py  metadata.db  pyproject.toml  test_qdrant_query.py
.claude/: settings.local.json
configs/: label_group_config.yaml  metadata_config.yaml
helpers/: analyze_chunk_triples_coverage.py  analyze_evidence_coverage.py  analyze_triples.py  check_label_groups.py  check_qdrant.py  check_self_linked_triples.py  compare_entity.py  danger_reset.py  query_neo4j.py  update_optimizer_config.py
output/: test_analysis.md
registry_info/: entity_registry.json  evidence_registry.json  label_registry.json  metadata_registry.json  ontology_registry.json  predicate_registry.json
src/kg_extractor/: __init__.py  agent.py  docx_processor.py  image_processor.py  input_processor.py  main.py  markdown_formatter.py  parser.py  pdf_processor.py  pptx_processor.py  prompts.py  xlsx_processor.py
src/kg_extractor/tools/: agent.py  langgraph_workflow.py  workflow.py
src/kg_extractor/utils/: api_keys.py  input_processor.py  llm_response_parser.py  markdown_formatter.py  metadata_config.yaml  metadata_db.py  metadata_extractor.py  model_setup.py  neo4j_graph_builder.py  parser.py  prompts.py  schema.md  schema.yaml  schema_parser.py  semantic_chunker.py  (+3 more)
src/kg_reasoning/: __init__.py  example.py  main.py
tests/: test_input_processor.py  test_main.py  test_parser.py  test_query.py
(+61 files in other folders)
